changed getLast